<resources>
    <string name="app_name">eServices</string>
    <string name="action_settings">Settings</string>
    <string name="LoginWelcomeText">مرحبا بكم في بوابة الخدمات الالكترونية.</string>
    <string name="Slogant">نعمل معا وسويا لتحسين جودة الخدمات وتسهيل التواصل.</string>
    <string name="HasAccount">لديك حساب مسبق</string>
    <string name="NewUser">مستخدم جديد</string>
    <string name="WithoutLogin">متابعة بدون تسجيل دخول</string>
    <integer name="gms_version">@integer/google_play_services_version</integer>
    <string name="underlined_text">
        <u>التفاصيل</u>
    </string>


    <string-array name="subscriberType">
        <item>فرد</item>
        <item>مؤسسة خاصة</item>
        <item>وزارة</item>
        <item>مدرسة</item>
        <item>دائرة حكومية</item>
        <item>محل تجاري</item>


    </string-array>

    <string-array name="buildingType">
        <item>مستقل</item>
        <item>شقة في عمارة</item>
    </string-array>


    <string-array name="documentType">
        <item>هوية</item>
        <item>مشغل مرخص</item>
        <item>اذن الاقتصاد الوطني</item>
        <item>جواز سفر</item>
        <item>غير ذالك</item>

    </string-array>


    <string name="forgetPassword_text">
        <u>نسيت كلمة المرور</u>
    </string>
    <string name="documentslist_text">
        <u>الاوراق والوثائق المطلوبة</u>
    </string>
</resources>
