<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">

    <ImageView android:layout_width="130dp" android:layout_height="130dp"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="28dp"
               android:src="@drawable/logoimage"
               android:id="@+id/imageView"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="112dp"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="112dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/arabicnormal"
            android:text="@string/LoginWelcomeText"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:fontFamily="@font/arabicnormal"
              android:text="@string/Slogant"
              android:textSize="20sp"
              android:gravity="center" android:layout_marginTop="10dp"

              app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="20dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="20dp" android:id="@+id/textView2"
              app:layout_constraintHorizontal_bias="0.609"/>
    <Button
            android:textColor="@color/roundedButtonText"
            android:text="@string/HasAccount"
            android:textSize="20sp"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/arabicnormal"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="36dp"
            android:id="@+id/btnHasAccount" android:onClick="btnHasAccount_Click"/>
    <Button android:layout_width="325dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:text="@string/NewUser"
            android:background="@drawable/rounded_button"
            android:textColor="@color/roundedButtonText"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/arabicnormal"
            app:layout_constraintTop_toBottomOf="@+id/btnHasAccount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" android:id="@+id/button2"/>

    <Button android:layout_width="325dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:text="@string/WithoutLogin"
            android:background="@drawable/rounded_button"
            android:textColor="@color/roundedButtonText"
            android:id="@+id/btnEnterWithoutLogin"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arabicnormal"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" android:onClick="btnEnterWithoutLogin_Click"/>

</android.support.constraint.ConstraintLayout>